syntax = "proto3";

package shortgrpc; // package name for generated files

option go_package = "shortgrpc/proto";

message GetURLRequest {
	string brief = 1;
    }

message GetURLResponse {
	string origin = 1;
}

message SetURLRequest {
	string origin = 1;
    }

message SetURLResponse {
	string brief = 1;
}

service Users {
	rpc GetURL(GetURLRequest) returns (GetURLResponse);
	rpc SetURL(SetURLRequest) returns (SetURLResponse);
} 